--- a/style/style.css
+++ b/style/style.css
@@ -47,6 +47,10 @@ main {
    box-shadow: 0px 25px 30px 0px rgba(0,0,0,0.28);
 }
 
+.wrapper {
+   position: relative;
+}
+
 picture {
    position: relative;
    width: 33rem;
@@ -59,10 +63,13 @@ picture {
 
 .imgBox {
    position: absolute;
-   left: 18.8rem;
+   /* left: 18.8rem; */
+   left: -14rem;
    z-index: 1;
    top: 27.3rem;
    transition: transform 0.8s ease-out;
+   left: -7.7rem;
+   top: 17.25rem;
 }
 
 h1 {
@@ -129,7 +136,11 @@ p {
    transform: translateX(-3rem);
 }
 
-@media screen and (max-width:376px) {
+@media screen and (max-width:1000px) {
+
+   .wrapper {
+      display: contents;
+   }
 
    body {
       min-height: 100vh;
